--- a/ascii.html
+++ b/ascii.html
@@ -7,6 +7,7 @@
 		<link href="css/ascii.css" type="text/css" rel="stylesheet">
 		<script src="js/animations.js" type="text/javascript"></script>
 		<script src="js/ascii.js" type="text/javascript"></script>
+		<script src="js/jsFunction2.js" type="text/javascript"></script>
     </head>
 	
     <body>
