--- a/ascii.html
+++ b/ascii.html
@@ -46,7 +46,9 @@
 				<label><input id="turbo" type="checkbox">Turbo</label>
 			</fieldset>
 		</div>
+		<h3 align="center">Results for Qn 2 are in the console</h3>
         <div id="validate">
+
             <a href="http://validator.w3.org/check/referer">
                <!-- <img src="w3c-html.png" alt="html validator">-->
             </a><br>
